Modified styles to set primary menu items to one line.

--- a/auto-loan-calculators/style.css
+++ b/auto-loan-calculators/style.css
@@ -1073,11 +1073,13 @@ object {
 }
 #primary-menu li a {
 	color: white;
+	font-size: 14px;
 	text-decoration: none;;
 }
 
 #new-price-cta {
 	color: white;
+	font-size: 14px;
 	text-decoration: none;
 }
 /*--------------------------------------------------------------
